# ai-ml-production-labs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  tox.ini
docs/: architecture-gallery.md  (+1 more)
labs/01-fastapi-azure-ml-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
labs/01-fastapi-azure-ml-service/docs/: architecture.md  deployment.md
labs/01-fastapi-azure-ml-service/infra/: main.tf  terraform.tfvars.example
labs/01-fastapi-azure-ml-service/postman/: lab-01.postman_collection.json
labs/01-fastapi-azure-ml-service/scripts/: smoke_test.py
labs/01-fastapi-azure-ml-service/src/fastapi_azure_ml_service/: __init__.py  app.py  config.py  schemas.py  service.py
labs/01-fastapi-azure-ml-service/tests/e2e/: test_deployed_health.py
labs/01-fastapi-azure-ml-service/tests/integration/: test_api.py
labs/01-fastapi-azure-ml-service/tests/unit/: test_schemas.py  test_service.py
labs/02-azure-functions-text-classifier/: .env.example  .funcignore  Dockerfile  README.md  docker-compose.yml  function_app.py  pyproject.toml
labs/02-azure-functions-text-classifier/docs/: architecture.md  deployment.md
labs/02-azure-functions-text-classifier/infra/: main.tf  terraform.tfvars.example
labs/02-azure-functions-text-classifier/postman/: lab-02.postman_collection.json
labs/02-azure-functions-text-classifier/scripts/: smoke_test.py
labs/02-azure-functions-text-classifier/src/azure_functions_text_classifier/: __init__.py  classifier.py  config.py  function_app.py  schemas.py  service.py
labs/02-azure-functions-text-classifier/tests/e2e/: test_deployed_classify.py
labs/02-azure-functions-text-classifier/tests/integration/: test_function.py
labs/02-azure-functions-text-classifier/tests/unit/: test_classifier.py  test_schemas.py  test_service.py
labs/03-fastmcp-portfolio-tools/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
labs/03-fastmcp-portfolio-tools/docs/: architecture.md  mcp-client-setup.md
labs/03-fastmcp-portfolio-tools/infra/: main.tf  terraform.tfvars.example
labs/03-fastmcp-portfolio-tools/scripts/: smoke_test.py
labs/03-fastmcp-portfolio-tools/src/fastmcp_portfolio_tools/: __init__.py  asgi.py  config.py  middleware.py  schemas.py  server.py
labs/03-fastmcp-portfolio-tools/tests/integration/: test_server.py
labs/03-fastmcp-portfolio-tools/tests/unit/: test_tools.py
labs/04-cosmosdb-llm-eval-store/: .env.example  README.md  docker-compose.yml  pyproject.toml
labs/04-cosmosdb-llm-eval-store/docs/: architecture.md
labs/04-cosmosdb-llm-eval-store/infra/: main.tf
labs/04-cosmosdb-llm-eval-store/scripts/: query_examples.py  seed.py  smoke_test.py
labs/04-cosmosdb-llm-eval-store/src/cosmosdb_llm_eval_store/: __init__.py  config.py  cosmos_repository.py  repository.py  schemas.py
labs/04-cosmosdb-llm-eval-store/tests/integration/: conftest.py  test_eval_lifecycle.py
labs/04-cosmosdb-llm-eval-store/tests/unit/: test_repository.py
labs/05-ollama-local-llm-api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
labs/05-ollama-local-llm-api/docs/: architecture.md  deployment.md
labs/05-ollama-local-llm-api/infra/: main.tf  terraform.tfvars.example
labs/05-ollama-local-llm-api/postman/: lab-05.postman_collection.json
labs/05-ollama-local-llm-api/scripts/: smoke_test.py
labs/05-ollama-local-llm-api/src/ollama_local_llm_api/: __init__.py  app.py  config.py  ollama_client.py  schemas.py  service.py
labs/05-ollama-local-llm-api/tests/e2e/: test_deployed_health.py
labs/05-ollama-local-llm-api/tests/integration/: test_api.py
labs/05-ollama-local-llm-api/tests/unit/: test_schemas.py  test_service.py
labs/06-cosmosdb-vector-memory-lab/: .env.example  README.md  docker-compose.yml  pyproject.toml
labs/06-cosmosdb-vector-memory-lab/data/: wikipedia_corpus.json
labs/06-cosmosdb-vector-memory-lab/docs/: architecture.md
labs/06-cosmosdb-vector-memory-lab/infra/: main.tf  terraform.tfvars.example
labs/06-cosmosdb-vector-memory-lab/scripts/: fetch_wikipedia_corpus.py  seed_data.py  smoke_test.py
labs/06-cosmosdb-vector-memory-lab/src/cosmosdb_vector_memory_lab/: __init__.py  config.py  cosmos_repository.py  memory.py  repository.py  schemas.py
labs/06-cosmosdb-vector-memory-lab/tests/e2e/: test_vector_search_azure.py
labs/06-cosmosdb-vector-memory-lab/tests/integration/: conftest.py  test_cosmos_store.py
labs/07-rag-retrieval-strategy-lab/: .env.example  README.md  docker-compose.yml  pyproject.toml
labs/07-rag-retrieval-strategy-lab/data/: golden_queries.json  wikipedia_corpus.json
labs/07-rag-retrieval-strategy-lab/docs/: architecture.md
labs/07-rag-retrieval-strategy-lab/scripts/: fetch_wikipedia_corpus.py  run_comparison.py
labs/08-langgraph-project-agent/: .env.example  Dockerfile  README.md  pyproject.toml
labs/08-langgraph-project-agent/docs/: architecture.md
labs/08-langgraph-project-agent/infra/: main.tf  terraform.tfvars.example
labs/09-llamaindex-doc-qa-lab/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
labs/09-llamaindex-doc-qa-lab/data/: wikipedia_corpus.json
labs/09-llamaindex-doc-qa-lab/docs/: architecture.md
labs/09-llamaindex-doc-qa-lab/infra/: main.tf  terraform.tfvars.example
labs/09-llamaindex-doc-qa-lab/scripts/: fetch_wikipedia_corpus.py  seed_data.py  smoke_test.py
labs/09-llamaindex-doc-qa-lab/tests/: conftest.py
labs/10-mlflow-classifier-api/: README.md  pyproject.toml
labs/10-mlflow-classifier-api/scripts/: train.py
labs/11-finetune-project-classifier/: README.md  pyproject.toml
labs/12-ml-drift-monitoring-lab/: README.md  pyproject.toml
labs/13-fastapi-opentelemetry-lab/: README.md  pyproject.toml
labs/14-portfolio-ai-production-capstone/: README.md  pyproject.toml
shared/: pyproject.toml
shared/src/production_labs_shared/: __init__.py  config.py  health.py  logging.py  schemas.py  telemetry.py
shared/tests/: test_config.py  test_health.py  test_logging.py  test_schemas.py  test_telemetry.py
(+88 files in other folders)
