[project]
name = "ai-ml-production-labs"
version = "0.1.0"
description = "Micro-labs for production-grade AI, ML, data science, and cloud systems."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Ricardo García Ramírez", email = "rgr5882@gmail.com" }
]
dependencies = []

[dependency-groups]
dev = [
  "tox>=4.25",
  "tox-uv>=1.25",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.11",
  "pyrefly>=0.17",
  "bandit[toml]>=1.7",
  "pip-audit>=2.7",
  "pre-commit>=3.7",
  "build>=1.2",
  "httpx>=0.27",
  # workspace runtime deps — needed so tox envs can import from shared/src
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
]

[tool.uv.workspace]
members = [
  "shared",
  "labs/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
  "C4",
  "ARG",
  "N",
  "RET",
  "RUF",
]
ignore = [
  "B008",  # FastAPI dependency injection may call functions in defaults.
]

[tool.ruff.lint.isort]
known-first-party = ["production_labs_shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
testpaths = ["shared/tests", "labs"]
pythonpath = ["shared/src"]
markers = [
  "unit: fast unit tests",
  "integration: integration tests requiring services or local containers",
  "e2e: end-to-end tests requiring deployed or composed infrastructure",
  "slow: slow tests",
]

[tool.coverage.run]
branch = true
source = ["shared/src", "labs"]
omit = [
  "*/tests/*",
  "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60  # raised per-lab as each lab reaches completion

[tool.pyrefly]
python_version = "3.12"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
