[project]
name = "production-labs-shared"
version = "0.1.0"
description = "Shared utilities for AI/ML production labs."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/production_labs_shared"]
