[project]
name = "fastapi-azure-ml-service"
version = "0.1.0"
description = "Containerized FastAPI prediction service deployed to Azure Container Apps."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_azure_ml_service"]
