[project]
name = "azure-functions-text-classifier"
version = "0.1.0"
description = "Serverless Python inference endpoint using Azure Functions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "azure-functions>=1.21",
  "scikit-learn>=1.5",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_functions_text_classifier"]
