[project]
name = "fastmcp-portfolio-tools"
version = "0.1.0"
description = "MCP server exposing typed portfolio analysis tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "fastmcp>=2.0",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_portfolio_tools"]
