[project]
name = "cosmosdb-llm-eval-store"
version = "0.1.0"
description = "NoSQL model for prompts, responses, model versions, evaluations, and human reviews."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "azure-cosmos>=4.7",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmosdb_llm_eval_store"]
