[project]
name = "ollama-local-llm-api"
version = "0.1.0"
description = "FastAPI wrapper around a local open-model LLM via Ollama."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_local_llm_api"]
