[project]
name = "cosmosdb-vector-memory-lab"
version = "0.1.0"
description = "Embedding storage and vector search with Cosmos DB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "azure-cosmos>=4.7",
  "sentence-transformers>=3.0",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmosdb_vector_memory_lab"]
