[project]
name = "rag-retrieval-strategy-lab"
version = "0.1.0"
description = "Compare RAG retrieval strategies (naive, filtered, reranked, query-expanded) with metrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "sentence-transformers>=3.0",
  "qdrant-client>=1.9",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_retrieval_strategy_lab"]
