[project]
name = "langgraph-project-agent"
version = "0.1.0"
description = "Controlled agent workflow using a LangGraph state graph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "langgraph>=0.2",
  "langchain-anthropic>=0.3",
  "langchain-ollama>=0.2",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_project_agent"]
