[project]
name = "llamaindex-doc-qa-lab"
version = "0.1.0"
description = "Document Q&A over project READMEs with cited source chunks using LlamaIndex."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "llama-index>=0.11",
  "llama-index-llms-anthropic>=0.3",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llamaindex_doc_qa_lab"]
