[project]
name = "mlflow-classifier-api"
version = "0.1.0"
description = "Incident severity classifier trained, tracked with MLflow, and served via FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "numpy>=2.0",
  "mlflow>=2.13",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlflow_classifier_api"]
