[project]
name = "ml-drift-monitoring-lab"
version = "0.1.0"
description = "Detect data drift between reference and current datasets using statistical tests."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "scipy>=1.13",
  "pandas>=2.2",
  "numpy>=2.0",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_drift_monitoring_lab"]
