[project]
name = "fastapi-opentelemetry-lab"
version = "0.1.0"
description = "FastAPI service instrumented with OpenTelemetry traces, metrics, and structured logs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-exporter-otlp>=1.25",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_opentelemetry_lab"]
