[project]
name = "portfolio-ai-production-capstone"
version = "0.1.0"
description = "Integrated production-shaped AI service combining FastAPI, RAG, LangGraph, and OpenTelemetry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "production-labs-shared",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "langgraph>=0.2",
  "langchain-anthropic>=0.3",
  "azure-cosmos>=4.7",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "pydantic>=2.7",
]

[tool.uv.sources]
production-labs-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_ai_production_capstone"]
